<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/main"
        android:contentDescription="TODO" />

    </LinearLayout>

    <TextView
        style="@style/AllTexts"
        android:text="@string/bus_name"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <TextView
        style="@style/AllTexts"
        android:text="@string/add"
        android:drawableLeft="@drawable/ic_add_location"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_add_location" />

    <TextView
        style="@style/AllTexts"
        android:text="@string/hours"
        android:drawableLeft="@drawable/ic_crop_square"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_crop_square" />

    <TextView
        style="@style/AllTexts"
        android:text="@string/phone"
        android:drawableLeft="@drawable/ic_phone"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_phone" />

    <TextView
        style="@style/AllTexts"
        android:text="@string/about"
        android:layout_marginTop="30dp"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        style="@style/AllTexts"
        android:text="@string/desc"
        android:textSize="18sp" />

    <Button
        style="@style/AllButton"
        android:text="@string/button"/>

</LinearLayout>